--- a/src/styles/_news.sass
+++ b/src/styles/_news.sass
@@ -7,6 +7,8 @@
     padding: 2rem
     @include xl
       width: $mainWidth
+    @include xxl
+      width: $mainWidth
     h1
       padding: 10px 0
     div
