--- a/src/styles/_beverage.sass
+++ b/src/styles/_beverage.sass
@@ -9,3 +9,46 @@
       width: $mainWidth
     @include xxl
       width: $mainWidth
+    h1
+      padding: 1rem 0
+    .target
+      &:nth-of-type(1)
+        h2
+          border-top-left-radius: 0.5rem
+          border-top-right-radius: 0.5rem
+      &:nth-last-of-type(1)
+        .content
+          border-bottom-left-radius: 0.5rem
+          border-bottom-right-radius: 0.5rem
+      h2
+        display: block
+        position: sticky
+        top: 90px
+        padding: 1rem
+        background: black
+        color: white 
+      .content
+        height: auto
+        padding: 5rem 2rem
+        color: white
+        object-fit: contain
+        background-repeat: no-repeat
+        table
+          max-width: 500px
+          margin: 0 auto
+          width: 100%
+          border-collapse: separate
+          border-spacing: 10px 5px // 水平 垂直
+          th
+            text-align: center
+            border-bottom: 2px dotted white
+            margin-right: 10px
+      #coffee ~ .content
+        background-image: url('../src/assets/coffee.jpg')
+      #iced ~ .content
+        background-image: url('../src/assets/ice.jpg')
+      #special ~ .content
+        background-image: url('../src/assets/unsplash.jpg')
+      #dessert ~ .content
+        background: grey
+       
