--- a/src/styles/_beverage.sass
+++ b/src/styles/_beverage.sass
@@ -50,5 +50,5 @@
       #special ~ .content
         background-image: url('../src/assets/unsplash.jpg')
       #dessert ~ .content
-        background: grey
+        background-image: url('../src/assets/mockaroon.jpg')
        
